<resources>
<string name="app_name">HallScrum</string>

<string name="hello_world">Hello world!</string>
<string name="search">Busqueda</string>
<string name="action_settings">Settings</string>
<string name="empty_string">Empty View</string>

<!-- TODO: Remove or change this placeholder text -->
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="drawer_open">Abrir</string>
<string name="drawer_close">Cerrar</string>
<string name="editar_proyecto">Actualizar Proyecto</string>
<string name="editar_equipo">Actualizar Equipo</string>



    <string-array name="tabs">
    <item>Proyectos</item>
    <item>Metas</item>
    <item>Equipos</item>
</string-array>
    <string name="title_activity_help">Ayuda y Sugerencias</string>
    <string name="title_activity_markup">Marcadores</string>
    <string name="title_activity_config">Ajustes </string>
    <string name="title_activity_about_us">Acerca De</string>
    <string name="title_activity_getAcount">Haz una cuenta</string>
    <string name="login">Login</string>


    <string name="hint_user">Introduce Tu Nombre</string>
    <string name="hint_lastname">Introduce Tu Apellido</string>
    <string name="hint_nickname">Introduce Tu Nickname</string>
    <string name="hint_password">Introduce Tu Contraseña</string>

    <string name="acept_politic">Al hacer click en Registrar, aceptas las siguientes politicas de HallScrum:</string>
    <string name="politic">Condiciones de uso y politica de privacidad</string>
    <string name="do_you_have_account">¿Ya tienes una cuenta?  Inicia Sesion</string>

    <string name="hint_pass">Password</string>
    <string name="hint_every_name">Introduce el nombre</string>
    <string name="txt_newAcount">Crea una nueva cuenta</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="title_login">Login</string>
    <string name="title_add_team">Agregar Equipo</string>
    <string name="title_add_proyect">Agregar Proyecto</string>
    <string name="title_logout">Logout</string>
    <string name="title_registrar">Registrar</string>
    <string name="splash_activity_string">Splash</string>
    <string name="title_activity_activity_db">ActivityDb</string>
    <string name="title_activity_add_team">AddTeamActivity</string>
    <string name="title_activity_add_proyect">AddProyectActivity</string>
    <string name="title_activity_add_fase">Agregar Fase</string>
    <string name="title_activity_add_meta">Agregar Meta</string>
    <string name="title_activity_list_fases">Fases</string>
    <string name="title_activity_list_meta">Metas</string>

    <string name="what_do_you_need">¿Que deseas hacer?</string>
    <string name="title_activity_edit_team">Actualizar Equipo</string>
    <string name="title_activity_edit_proyect">Actualizar Proyecto</string>
    <string name="title_activity_edit_fase">Actualizar Fase</string>
    <string name="title_activity_edit_meta">Actualizar Meta</string>


    <string name="edit_name">Nuevo Nombre</string>
    <string name="code_team">Codigo de Equipo</string>
    <string name="date_proyect">Fecha de Proyecto</string>
    <string name="fecha_inicio_y_finalizacion">Duración</string>
    <string name="estado_meta">Estado</string>


    <string name="start_session">Inicie Sesión en Hallscrum</string>
    <string name="what_you_need0">Usa tu nickname y contraseña </string>
    <string name="what_you_need1">que usaste al crear tu cuenta. </string>


    <string name="who_are">Hola! Somos Halley</string>
    <string name="vision">Una empresa donde creemos en tus sueños</string>
    <string name="thanks">Gracias por utilizar Hallscrum</string>
    <string name="Team">Este es nuestro equipo: </string>
    <string name="Member1">Daniel Mendez  : CEO</string>
    <string name="Member2">Abner Juarez : Servicios </string>
    <string name="Member3">Alexander Palax: Android Scripter </string>
    <string name="Member4">Fernando Pnsamiento: JSP</string>
    <string name="Member5">Luis D. Con : Web Designer</string>

    <string name="to_help0">Presiona el boton </string>
    <string name="to_help1">para recibir ayuda </string>


</resources>
