<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/logActivity"

    >

    <RelativeLayout
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/relativeLayout">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:id="@+id/imageView"
                android:src="@drawable/comet_splash"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/group_top"
            android:id="@+id/txtUsuario"
            android:hint="@string/hint_user"
            android:layout_below="@+id/textView8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="29dp" />


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@drawable/group_bottom"
            android:id="@+id/txtContrasena"
            android:hint="@string/hint_pass"
            android:layout_below="@+id/txtUsuario"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="90dp"
            android:paddingRight="90dp"
            android:layout_marginTop="6dp"
            android:text="@string/title_login"
            android:id="@+id/btnLogin"
            android:gravity="center"
            android:background="@drawable/btn_green_circle_corners"
            android:layout_below="@+id/txtContrasena"
            android:layout_centerHorizontal="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="¿Aún no tienes una cuenta?"
            android:id="@+id/txtWithoutAccount"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_session"
            android:id="@+id/textView"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/relativeLayout"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_you_need0"
            android:id="@+id/textView2"
            android:textSize="15dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_you_need1"
            android:id="@+id/textView8"
            android:textSize="15dp"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />


    </RelativeLayout>


</RelativeLayout>