<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.halley.md.hallscrum.Activity.Update.EditMetaActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtEdit"
            android:text="@string/title_activity_edit_meta"
            android:textSize="@dimen/abc_action_bar_progress_bar_size"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_marginTop="39dp"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNewName"
        android:hint="@string/edit_name"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/separator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_name"
        android:id="@+id/txtNuevoNombre"
        android:textSize="20dp"
        android:layout_below="@+id/txtdate_meta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <View
        style="@style/Divider"
        android:id="@+id/separator"
        android:layout_below="@+id/txtNuevoNombre"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado_meta"
        android:id="@+id/txvdatemeta"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        style="@style/Divider"
        android:id="@+id/separator2"
        android:layout_below="@+id/txvdatemeta"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado_meta"
        android:id="@+id/txtdate_meta"
        android:textSize="15dp"
        android:layout_below="@+id/separator2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>
